Added contact-form and other minor changes

--- a/src/Homepage/Pages/Index.cshtml
+++ b/src/Homepage/Pages/Index.cshtml
@@ -39,7 +39,7 @@
               data-type='[
                 "Hi, I&#39;m Nemi.",
                 "I&#39;m @Model.Age years old.",
-                "I&#39;m a developer.",
+                "I&#39;m a software developer.",
                 "I like competitive programming.",
                 "I like G-Funk.",
                 "I love the game of basketball :o)",
