--- a/src/Homepage/Pages/Shared/_Layout.cshtml
+++ b/src/Homepage/Pages/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="mailto:n@nemrud.de">Contact</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Contact">Contact</a>
                         </li>
                     </ul>
                 </div>
