--- a/src/Homepage/wwwroot/css/site.css
+++ b/src/Homepage/wwwroot/css/site.css
@@ -1,5 +1,10 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
+:root {
+    --highlight-color: #14A76C;
+    --highlight-color-dark: #0f794f;
+    --highlight-color-light: #19d589;
+}
 
 a.navbar-brand {
   white-space: normal;
@@ -307,5 +312,9 @@ svg {
 }
 
 .colored {
-    color: #4172B8;
+    color: var(--highlight-color);
+}
+
+#success_message {
+    display: none;
 }
