--- a/src/Homepage/Pages/Index.cshtml
+++ b/src/Homepage/Pages/Index.cshtml
@@ -10,7 +10,7 @@
 </head>
 <div class="container">
     <div class="avatar-wrapper">
-        <img class="avatar avatar-default circle" src="avatar.jpg" alt="">
+        <img class="avatar avatar-default circle" src="~/img/avatar.jpg" alt="">
     </div>
     <div id="mediaAll">
         <a href="#">
