--- a/src/Homepage/Pages/Index.cshtml
+++ b/src/Homepage/Pages/Index.cshtml
@@ -9,9 +9,9 @@
     <script src="~/js/typewriter.js"></script>
 </head>
 <div class="container">
-    <div class="avatar-wrapper">
-        <img class="avatar avatar-default circle" src="~/img/avatar.jpg" alt="">
-    </div>
+    <figure class="avatar-wrapper circle">
+        <img class="" src="~/img/avatar.jpg" alt="">
+    </figure>
     <div id="mediaAll">
         <a href="https://www.facebook.com/o.O.Keks" target="_blank">
             <div id="facebook" class="media" style="opacity: 1; bottom: 100%; top: 0px;">
