--- a/src/Homepage/wwwroot/css/site.css
+++ b/src/Homepage/wwwroot/css/site.css
@@ -343,3 +343,12 @@ svg {
 #success_message {
     display: none;
 }
+
+#buildId {
+    font-size: 6px;
+    position: absolute;
+    bottom: 6px;
+    right: 6px;
+    vertical-align: text-bottom;
+    color: lightgray;
+}
