--- a/src/Homepage/wwwroot/css/site.css
+++ b/src/Homepage/wwwroot/css/site.css
@@ -41,31 +41,31 @@ html {
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
 
 body.light {
@@ -78,20 +78,20 @@ body.dark {
     color: #fff;
 }
 
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
+}
+
 footer.light, header.light {
     background-color: #fff;
 }
 
 footer.dark, header.dark {
     background-color: #282828;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
 }
 
 .floatRight {
@@ -351,4 +351,12 @@ svg {
     right: 6px;
     vertical-align: text-bottom;
     color: lightgray;
+}
+
+.noborder {
+    border: none;
+}
+
+.noborder:focus {
+    outline: 0;
 }
