--- a/src/Homepage/Pages/Shared/_Layout.cshtml
+++ b/src/Homepage/Pages/Shared/_Layout.cshtml
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@using Homepage.Settings
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Nemrud Demir</title>
+    <title>@ViewData["Title"] - @Owner.FullName</title>
     <link rel="apple-touch-icon" sizes="180x180" href="~/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="~/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="~/img/favicon-16x16.png">
@@ -44,7 +45,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Homepage</a>
-                <button id="nav-icon" class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <button id="nav-icon" class="noborder navbar-toggler collapsed" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <div id="nav-icon-wrapper">
                         <span></span>
@@ -74,7 +75,7 @@
 
     <footer class="border-top footer text-muted text-center box-shadow">
         <div class="container footer-text">
-            &copy; 2019 - Nemrud Demir - <a asp-area="" asp-page="/Impressum">Impressum</a>
+            &copy; 2019 - @Owner.FullName - <a asp-area="" asp-page="/Impressum">Impressum</a>
         </div>
     </footer>
 
