--- a/src/Homepage/Pages/Index.cshtml
+++ b/src/Homepage/Pages/Index.cshtml
@@ -34,7 +34,7 @@
         Hello, my name is <span class="colored">@Owner.FullName</span>.<br>I'm a @Owner.Job based in @Owner.Base.
     </h2>
     <div id="typewriter" class="text-center my-5">
-        <span class="typewrite colored" data-period="2000"
+        <span id="typewriteSpan" class="colored" data-period="2000"
               data-type='[
                 "I like competitive programming.",
                 "I like G-Funk.",
