--- a/src/Homepage/wwwroot/css/contact.css
+++ b/src/Homepage/wwwroot/css/contact.css
@@ -8,7 +8,7 @@
 }
 
 #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] {
-    font: 400 12px/16px "Open Sans", Helvetica, Arial, sans-serif;
+    font: 400 small "Open Sans", Helvetica, Arial, sans-serif;
 }
 
 #contact {
@@ -118,14 +118,11 @@ fieldset {
     -webkit-animation-duration: 2s;
 }
 
-#contact-container-overlay {
-}
-
 .overlay {
     width: 100%;
     position: absolute;
     height: 100%;
-    top: 0px;
+    top: 0;
     overflow: hidden;
     background-color: rgba(0,0,0,.2);
 }
@@ -138,6 +135,7 @@ fieldset {
 }
 
 #result-overlay {
+    background-color: #f9f9f9;
     background-color: rgba(249,249,249,241);
 }
 
