--- a/src/Homepage/wwwroot/css/site.css
+++ b/src/Homepage/wwwroot/css/site.css
@@ -3,7 +3,7 @@ for details on configuring this project to bundle and minify static web assets. 
 :root {
     --highlight-color: #14A76C;
     --highlight-color-dark: #0f794f;
-    --highlight-color-light: #19d589;
+    /*--highlight-color-light: #19d589;*/
 }
 
 a.navbar-brand {
@@ -61,6 +61,16 @@ button.accept-policy {
 html {
     position: relative;
     min-height: 100%;
+}
+
+::selection {
+    background: var(--highlight-color);
+    color: #fff;
+}
+
+::-moz-selection {
+    background: var(--highlight-color);
+    color: #fff;
 }
 
 body {
@@ -217,7 +227,7 @@ div {
 
 
 #nav-icon.collapsed span:nth-child(1) {
-    top: 0px;
+    top: 0;
 }
 
 #nav-icon span:nth-child(2), #nav-icon span:nth-child(3) {
@@ -230,15 +240,15 @@ div {
 
 #nav-icon span:nth-child(1), #nav-icon span:nth-child(4) {
     top: 6px;
-    width: 0%;
+    width: 0;
     left: 50%;
 }
 
 #nav-icon.collapsed span {
-    -webkit-transform: rotate(0deg) !important;
-    -moz-transform: rotate(0deg) !important;
-    -o-transform: rotate(0deg) !important;
-    transform: rotate(0deg) !important;
+    -webkit-transform: rotate(0) !important;
+    -moz-transform: rotate(0) !important;
+    -o-transform: rotate(0) !important;
+    transform: rotate(0) !important;
 
     width: 100% !important;
     left: 0 !important;
@@ -258,19 +268,15 @@ div {
     transform: rotate(-45deg);
 }
 
-#nav-icon {
-
-}
-
 #nav-icon-wrapper {
     margin: 0.5rem 0.75rem;
     width: 20px;
     height: 16px;
     position: relative;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -o-transform: rotate(0);
+    transform: rotate(0);
     -webkit-transition: .5s ease-in-out;
     -moz-transition: .5s ease-in-out;
     -o-transition: .5s ease-in-out;
@@ -287,10 +293,10 @@ div {
     border-radius: 2px;
     opacity: 1;
     left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -o-transform: rotate(0);
+    transform: rotate(0);
     -webkit-transition: .25s ease-in-out;
     -moz-transition: .25s ease-in-out;
     -o-transition: .25s ease-in-out;
@@ -312,8 +318,8 @@ svg {
 }
 
 .blinking {
-    animation: blink-animation 1s steps(3, start) infinite;
     -webkit-animation: blink-animation 1s steps(3, start) infinite;
+    animation: blink-animation 1s steps(3, start) infinite;
 }
 
 @keyframes blink-animation {
