--- a/src/Homepage/Pages/Impressum.cshtml
+++ b/src/Homepage/Pages/Impressum.cshtml
@@ -5,102 +5,105 @@
     ViewData["Title"] = "Impressum";
 }
 
-<div class="Content Impressum">
-    <div class="titel"><h2>@ViewData["Title"]</h2></div>
-    <br />
-    <h4>Kontakt:</h4>
-    <p>@Owner.FullName<br />E-Mail: webmaster@nemrud.de
-    <p class="invisible"></p>
-    <h4>Haftung f&uuml;r Inhalte</h4>
-    <p>
-        Als Diensteanbieter sind wir
-        gem&auml;&szlig; &sect; 7 Abs.1 TMG f&uuml;r eigene Inhalte auf diesen Seiten nach den allgemeinen
-        Gesetzen verantwortlich. Nach &sect;&sect; 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht
-        verpflichtet, &uuml;bermittelte oder gespeicherte fremde Informationen zu &uuml;berwachen oder nach
-        Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit hinweisen.
-    </p>
-    <p>
-        Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen
-        Gesetzen bleiben hiervon unber&uuml;hrt. Eine diesbez&uuml;gliche Haftung ist jedoch erst ab dem
-        Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung m&ouml;glich. Bei Bekanntwerden von
-        entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
-    </p>
-    <h4>Haftung f&uuml;r Links</h4>
-    <p>
-        Unser Angebot enth&auml;lt Links zu externen Websites Dritter, auf deren Inhalte
-        wir keinen Einfluss haben. Deshalb k&ouml;nnen wir f&uuml;r diese fremden Inhalte auch keine
-        Gew&auml;hr &uuml;bernehmen. F&uuml;r die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter
-        oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf
-        m&ouml;gliche Rechtsverst&ouml;&szlig;e &uuml;berpr&uuml;ft. Rechtswidrige Inhalte waren zum
-        Zeitpunkt der Verlinkung nicht erkennbar.
-    </p> <p>
-        Eine permanente inhaltliche Kontrolle der verlinkten
-        Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei
-        Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
-    </p>
-    <h4>Urheberrecht</h4>
-    <p>
-        Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten
-        unterliegen dem deutschen Urheberrecht. Die Vervielf&auml;ltigung, Bearbeitung, Verbreitung und jede
-        Art der Verwertung au&szlig;erhalb der Grenzen des Urheberrechtes bed&uuml;rfen der schriftlichen
-        Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur f&uuml;r
-        den privaten, nicht kommerziellen Gebrauch gestattet.
-    </p> <p>
-        Soweit die Inhalte auf dieser Seite nicht
-        vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte
-        Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam
-        werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen
-        werden wir derartige Inhalte umgehend entfernen.
-    </p>
+    <div class="Content Impressum">
+        <div class="titel"><h2>@ViewData["Title"]</h2></div>
+        <br />
+        <h4>Kontakt:</h4>
+        <p>@Owner.FullName<br />E-Mail: webmaster@nemrud.de
+        <p class="invisible"></p>
+        <h4>Haftung f&uuml;r Inhalte</h4>
+        <p>
+            Als Diensteanbieter sind wir
+            gem&auml;&szlig; &sect; 7 Abs.1 TMG f&uuml;r eigene Inhalte auf diesen Seiten nach den allgemeinen
+            Gesetzen verantwortlich. Nach &sect;&sect; 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht
+            verpflichtet, &uuml;bermittelte oder gespeicherte fremde Informationen zu &uuml;berwachen oder nach
+            Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit hinweisen.
+        </p>
+        <p>
+            Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen
+            Gesetzen bleiben hiervon unber&uuml;hrt. Eine diesbez&uuml;gliche Haftung ist jedoch erst ab dem
+            Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung m&ouml;glich. Bei Bekanntwerden von
+            entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
+        </p>
+        <h4>Haftung f&uuml;r Links</h4>
+        <p>
+            Unser Angebot enth&auml;lt Links zu externen Websites Dritter, auf deren Inhalte
+            wir keinen Einfluss haben. Deshalb k&ouml;nnen wir f&uuml;r diese fremden Inhalte auch keine
+            Gew&auml;hr &uuml;bernehmen. F&uuml;r die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter
+            oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf
+            m&ouml;gliche Rechtsverst&ouml;&szlig;e &uuml;berpr&uuml;ft. Rechtswidrige Inhalte waren zum
+            Zeitpunkt der Verlinkung nicht erkennbar.
+        </p> <p>
+            Eine permanente inhaltliche Kontrolle der verlinkten
+            Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei
+            Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
+        </p>
+        <h4>Urheberrecht</h4>
+        <p>
+            Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten
+            unterliegen dem deutschen Urheberrecht. Die Vervielf&auml;ltigung, Bearbeitung, Verbreitung und jede
+            Art der Verwertung au&szlig;erhalb der Grenzen des Urheberrechtes bed&uuml;rfen der schriftlichen
+            Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur f&uuml;r
+            den privaten, nicht kommerziellen Gebrauch gestattet.
+        </p> <p>
+            Soweit die Inhalte auf dieser Seite nicht
+            vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte
+            Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam
+            werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen
+            werden wir derartige Inhalte umgehend entfernen.
+        </p>
 
-    <h4>
-        Google
-        Analytics
-    </h4>
-    <p>
-        Diese Website nutzt Funktionen des Webanalysedienstes Google Analytics. Anbieter
-        ist die Google Inc., 1600 Amphitheatre Parkway Mountain View, CA 94043, USA.
-    </p> <p>
-        Google
-        Analytics verwendet so genannte &quot;Cookies&quot;. Das sind Textdateien, die auf Ihrem Computer
-        gespeichert werden und die eine Analyse der Benutzung der Website durch Sie erm&ouml;glichen. Die
-        durch den Cookie erzeugten Informationen &uuml;ber Ihre Benutzung dieser Website werden in der Regel
-        an einen Server von Google in den USA &uuml;bertragen und dort gespeichert.
-    </p>
-    <h4>
-        Browser
-        Plugin
-    </h4>
-    <p>
-        Sie k&ouml;nnen die Speicherung der Cookies durch eine entsprechende
-        Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall
-        gegebenenfalls nicht s&auml;mtliche Funktionen dieser Website vollumf&auml;nglich werden nutzen
-        k&ouml;nnen. Sie k&ouml;nnen dar&uuml;ber hinaus die Erfassung der durch den Cookie erzeugten und
-        auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die Verarbeitung
-        dieser Daten durch Google verhindern, indem Sie das unter dem folgenden Link verf&uuml;gbare Browser-
-        Plugin herunterladen und installieren: <a href="https://tools.google.com/dlpage/gaoptout?hl=de"
-                                                  target="_blank">tools.google.com</a>
-    </p>
-    <h4>
-        Widerspruch gegen
-        Datenerfassung
-    </h4>
-    <p>
-        Sie k&ouml;nnen die Erfassung Ihrer Daten durch Google Analytics
-        verhindern, indem Sie auf folgenden Link klicken. Es wird ein Opt-Out-Cookie gesetzt, der die Erfassung
-        Ihrer Daten bei zuk&uuml;nftigen Besuchen dieser Website verhindert: <a href="javascript:gaOptout();">Google Analytics deaktivieren</a>
-    </p> <p>
-        Mehr Informationen zum
-        Umgang mit Nutzerdaten bei Google Analytics finden Sie in der Datenschutzerkl&auml;rung von Google:
-        <a href="https://support.google.com/analytics/answer/6004245?hl=de"
-           target="_blank">support.google.com</a>
-    </p>
-    <h4>Widerspruch Werbe-Mails</h4>
-    <p>
-        Der Nutzung von im Rahmen der Impressumspflicht
-        ver&ouml;ffentlichten Kontaktdaten zur &Uuml;bersendung von nicht ausdr&uuml;cklich angeforderter
-        Werbung und Informationsmaterialien wird hiermit widersprochen. Die Betreiber der Seiten behalten sich
-        ausdr&uuml;cklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa
-        durch Spam-E-Mails, vor.
-    </p>
-</div>
+        <h4>
+            Google
+            Analytics
+        </h4>
+        <p>
+            Diese Website nutzt Funktionen des Webanalysedienstes Google Analytics. Anbieter
+            ist die Google Inc., 1600 Amphitheatre Parkway Mountain View, CA 94043, USA.
+        </p> <p>
+            Google
+            Analytics verwendet so genannte &quot;Cookies&quot;. Das sind Textdateien, die auf Ihrem Computer
+            gespeichert werden und die eine Analyse der Benutzung der Website durch Sie erm&ouml;glichen. Die
+            durch den Cookie erzeugten Informationen &uuml;ber Ihre Benutzung dieser Website werden in der Regel
+            an einen Server von Google in den USA &uuml;bertragen und dort gespeichert.
+        </p>
+        <h4>Google reCAPTCHA</h4>
+        <p>Unser oberstes Ziel ist es, dass unsere Webseite für Sie und für uns bestmöglich geschützt und sicher ist. Um das zu gewährleisten, verwenden wir Google reCAPTCHA der Firma Google Inc. (1600 Amphitheatre Parkway Mountain View, CA 94043, USA). Mit reCAPTCHA können wir feststellen, ob Sie auch wirklich ein Mensch aus Fleisch und Blut sind und kein Roboter oder eine andere Spam-Software. Unter Spam verstehen wir jede, auf elektronischen Weg, unerwünschte Information, die uns ungefragter Weise zukommt. Bei den klassischen CAPTCHAS mussten Sie zur Überprüfung meist Text- oder Bildrätsel lösen. Mit reCAPTCHA von Google müssen wir Sie meist nicht mit solchen Rätseln belästigen. Hier reicht es in den meisten Fällen, wenn Sie einfach ein Häkchen setzen und so bestätigen, dass Sie kein Bot sind. Mit der neuen Invisible reCAPTCHA Version müssen Sie nicht mal mehr ein Häkchen setzen. Wie das genau funktioniert und vor allem welche Daten dafür verwendet werden, erfahren Sie im Verlauf dieser Datenschutzerklärung.</p>
+        <p>Rechtsgrundlage für die Verwendung ist Artikel 6 (1) f (Rechtmäßigkeit der Verarbeitung), denn es besteht ein berechtigtes Interesse diese Webseite vor Bots und Spam-Software zu schützen.</p>
+        <h4>
+            Browser
+            Plugin
+        </h4>
+        <p>
+            Sie k&ouml;nnen die Speicherung der Cookies durch eine entsprechende
+            Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall
+            gegebenenfalls nicht s&auml;mtliche Funktionen dieser Website vollumf&auml;nglich werden nutzen
+            k&ouml;nnen. Sie k&ouml;nnen dar&uuml;ber hinaus die Erfassung der durch den Cookie erzeugten und
+            auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die Verarbeitung
+            dieser Daten durch Google verhindern, indem Sie das unter dem folgenden Link verf&uuml;gbare Browser-
+            Plugin herunterladen und installieren: <a href="https://tools.google.com/dlpage/gaoptout?hl=de"
+                                                      target="_blank">tools.google.com</a>
+        </p>
+        <h4>
+            Widerspruch gegen
+            Datenerfassung
+        </h4>
+        <p>
+            Sie k&ouml;nnen die Erfassung Ihrer Daten durch Google Analytics
+            verhindern, indem Sie auf folgenden Link klicken. Es wird ein Opt-Out-Cookie gesetzt, der die Erfassung
+            Ihrer Daten bei zuk&uuml;nftigen Besuchen dieser Website verhindert: <a href="javascript:gaOptout();">Google Analytics deaktivieren</a>
+        </p> <p>
+            Mehr Informationen zum
+            Umgang mit Nutzerdaten bei Google Analytics finden Sie in der Datenschutzerkl&auml;rung von Google:
+            <a href="https://support.google.com/analytics/answer/6004245?hl=de"
+               target="_blank">support.google.com</a>
+        </p>
+        <h4>Widerspruch Werbe-Mails</h4>
+        <p>
+            Der Nutzung von im Rahmen der Impressumspflicht
+            ver&ouml;ffentlichten Kontaktdaten zur &Uuml;bersendung von nicht ausdr&uuml;cklich angeforderter
+            Werbung und Informationsmaterialien wird hiermit widersprochen. Die Betreiber der Seiten behalten sich
+            ausdr&uuml;cklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa
+            durch Spam-E-Mails, vor.
+        </p>
+    </div>
