--- a/src/Homepage/wwwroot/css/contact.css
+++ b/src/Homepage/wwwroot/css/contact.css
@@ -143,6 +143,10 @@ fieldset {
     font-size: x-large;
 }
 
+#resultInfo {
+    font-size: x-small;
+}
+
 .success {
     color: var(--success);
 }
@@ -185,4 +189,18 @@ fieldset {
     max-width: 100px;
     max-height: 100px;
     margin: 0 auto;
+}
+
+.close {
+    cursor: pointer;
+    padding: 5px 10px;
+}
+
+#sendResult > span {
+    display: block;
+    text-align: center;
+}
+
+#mailTo {
+    margin-top: 10px;
 }
