--- a/src/Homepage/Pages/Impressum.cshtml
+++ b/src/Homepage/Pages/Impressum.cshtml
@@ -82,7 +82,7 @@
             auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die Verarbeitung
             dieser Daten durch Google verhindern, indem Sie das unter dem folgenden Link verf&uuml;gbare Browser-
             Plugin herunterladen und installieren: <a href="https://tools.google.com/dlpage/gaoptout?hl=de"
-                                                      target="_blank">tools.google.com</a>
+                                                      target="_blank" rel="noopener noreferrer">tools.google.com</a>
         </p>
         <h4>
             Widerspruch gegen
@@ -96,7 +96,7 @@
             Mehr Informationen zum
             Umgang mit Nutzerdaten bei Google Analytics finden Sie in der Datenschutzerkl&auml;rung von Google:
             <a href="https://support.google.com/analytics/answer/6004245?hl=de"
-               target="_blank">support.google.com</a>
+               target="_blank" rel="noopener noreferrer">support.google.com</a>
         </p>
         <h4>Widerspruch Werbe-Mails</h4>
         <p>
