--- a/src/Homepage/Pages/Index.cshtml
+++ b/src/Homepage/Pages/Index.cshtml
@@ -5,26 +5,24 @@
     ViewData["Title"] = "Home";
 }
 
-<head>
-    <script src="~/js/Index.js"></script>
-    <script src="~/js/typewriter.js"></script>
-</head>
+<script src="~/js/Index.js"></script>
+<script src="~/js/typewriter.js"></script>
 <div class="container">
     <figure class="avatar-wrapper circle">
         <img class="" src="~/img/avatar.jpg" alt="">
     </figure>
     <div id="mediaAll">
-        <a href="https://www.facebook.com/o.O.Keks" target="_blank">
+        <a href="https://www.facebook.com/o.O.Keks" target="_blank" rel="noopener noreferrer" style="display: none">
             <div id="facebook" class="media" style="opacity: 1; bottom: 100%; top: 0;">
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Facebook</title><path d="M23.9981 11.9991C23.9981 5.37216 18.626 0 11.9991 0C5.37216 0 0 5.37216 0 11.9991C0 17.9882 4.38789 22.9522 10.1242 23.8524V15.4676H7.07758V11.9991H10.1242V9.35553C10.1242 6.34826 11.9156 4.68714 14.6564 4.68714C15.9692 4.68714 17.3424 4.92149 17.3424 4.92149V7.87439H15.8294C14.3388 7.87439 13.8739 8.79933 13.8739 9.74824V11.9991H17.2018L16.6698 15.4676H13.8739V23.8524C19.6103 22.9522 23.9981 17.9882 23.9981 11.9991Z"></path></svg>
             </div>
         </a>
-        <a href="https://www.hackerrank.com/nemrud_demir" target="_blank">
+        <a href="https://www.hackerrank.com/nemrud_demir" target="_blank" rel="noopener noreferrer">
             <div id="hackerrank" class="media" style="opacity: 1; bottom: 100%; top: 0;">
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>HackerRank</title><path d="M12 0c1.285 0 9.75 4.886 10.392 6 .645 1.115.645 10.885 0 12S13.287 24 12 24s-9.75-4.885-10.395-6c-.641-1.115-.641-10.885 0-12C2.25 4.886 10.715 0 12 0zm2.295 6.799c-.141 0-.258.115-.258.258v3.875H9.963V6.908h.701c.141 0 .254-.115.254-.258 0-.094-.049-.176-.123-.221L9.223 4.92c-.049-.063-.141-.109-.226-.109-.084 0-.16.045-.207.107L7.11 6.43c-.072.045-.12.126-.12.218 0 .143.113.258.255.258h.704l.008 10.035c0 .145.111.258.254.258h1.492c.142 0 .259-.115.259-.256v-4.004h4.073v4.152h-.699c-.143 0-.256.115-.256.258 0 .092.048.174.119.219l1.579 1.51c.044.061.141.109.225.109.085 0 .159-.045.208-.109l1.679-1.51c.072-.045.12-.127.12-.219 0-.143-.115-.258-.255-.258h-.704l-.007-10.034c0-.145-.114-.26-.255-.26h-1.494v.002z"></path></svg>
             </div>
         </a>
-        <a href="https://github.com/NemrudDemir/" target="_blank">
+        <a href="https://github.com/NemrudDemir/" target="_blank" rel="noopener noreferrer">
             <div id="github" class="media" style="opacity: 1; bottom: 100%; top: 0;">
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"></path></svg>
             </div>
