--- a/src/Homepage/Pages/Shared/_Layout.cshtml
+++ b/src/Homepage/Pages/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- version @Helpers.ApplicationInformations.Version -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - @Owner.FullName</title>
@@ -75,7 +76,7 @@
 
     <footer class="border-top footer text-muted text-center box-shadow">
         <div class="container footer-text">
-            &copy; 2020 - @Owner.FullName - <a asp-area="" asp-page="/Impressum">Impressum</a>
+            &copy; 2023 - @Owner.FullName - <a asp-area="" asp-page="/Impressum">Impressum</a>
         </div>
     </footer>
 
